feat: develop initial over all look and feel

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,10 @@
 {
 	"compilerOptions": {
-		"baseUrl": "."
-	}
+		"baseUrl": ".",
+		"paths": {
+			"@/components": ["components"],
+			"@/icons": ["icons"]
+		}
+	},
+	"exclude": [".next", "node_modules"]
 }
