feat: setup redux to be compatible for next.js

--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
 	},
 	"dependencies": {
 		"next": "^9.5.3",
+		"next-redux-wrapper": "^6.0.2",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-redux": "^7.2.1",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
 		"sass": "^1.26.11"
 	},
 	"devDependencies": {
