--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
 		]
 	},
 	"dependencies": {
+		"clsx": "^1.1.1",
 		"next": "^9.5.3",
 		"next-redux-wrapper": "^6.0.2",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-hook-form": "^6.8.6",
 		"react-redux": "^7.2.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
