--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"react-redux": "^7.2.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
-		"sass": "^1.26.11"
+		"sass": "^1.26.11",
+		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^10.1.0",
